# set-cover

./: README.md  set-cover.cabal
src/Math/: SetCover.hs
